# indago_c

./: .gitignore  CMakeLists.txt  README.md  main.c  main.h
.github/workflows/: cmake-linux-windows.yml
core/: camera.c  camera.h  cleanup.c  cleanup.h  input.c  input.h  object.c  object.h  primitives.c  primitives.h  render.c  render.h  resize.c  resize.h  timer.c  timer.h  utility.c  utility.h  vertex.h
init/: buffers.c  buffers.h  init.c  init.h  shaders.c  shaders.h  test.c  test.h  uniforms.c  uniforms.h  window.c  window.h
init/tests/: cube.c  cube.h  mouse-ray.c  mouse-ray.h  points.c  points.h  voronoi.c  voronoi.h  waves.c  waves.h
physics/: rays.c  rays.h
shaders/: fragment_shader.c  fragment_shader.h  shader.fragment.glsl  shader.vertex.glsl  vertex_shader.c  vertex_shader.h
